Fix images being blurry. The web is a vast joke.
Everyone talk about standardization, but the only thing I see is chaos.
Oh, may I ask, WHY IS SIMPLE STUFF SO HARD IN WEB?
WHY WHY WHY WHY?

SEE, CANIUSE.COM SAYS PIXELATED ISN'T SUPPORTED BY FIREFOX ON ANDROID,
AND YET IT ACTUALLY WORKS, BUT CRISP-EDGES ISN'T SUPPORTED BY ANYBODY??
WHO AM I SUPPOSED TO TRUST NOW?
WHY WHY WHY?

Please, may the web become actually enjoyable to use.

--- a/wiki/public/style.css
+++ b/wiki/public/style.css
@@ -198,7 +198,7 @@ pre {
 /* Images */
 
 img.item, .mod_icon {
-	image-rendering: crisp-edges;
+	image-rendering: pixelated;
 }
 
 .mod_icon {
